PP-12105 expand bin record testing, pom opt